# PROJ-DISCORD_BOT

./: .breakpoints  README.md  instaloader_meme.py  is_ppt_near.py  keep_alive.py  main.py  menu.py  mess.json  ppt.py  pyproject.toml
cogs/: clean.py  meme.py  mess.py
instagram_meme/: 0.json.xz  1.json.xz  10.json.xz  11.json.xz  12.json.xz  13.json.xz  14.json.xz  15.json.xz  16.json.xz  17.json.xz  18.json.xz  19.json.xz  2.json.xz  3.json.xz  4.json.xz  5.json.xz  6.json.xz  7.json.xz  8.json.xz  9.json.xz
temp_new_cogs/: fun.py  mess.json  mess.py
